--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
 dependencies = [
     "allianceauth>=3.3.0",
     "django-oauth-toolkit>=2.3.0,<3.0.0",
+    "Pillow"
 ]
 dynamic = ["version", "description"]
 
